// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages > CreateConsequenceNetwork > should render correctly with inputs 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          alpha
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <form
        action="/api/createConsequenceNetwork"
        method="post"
      >
        <div
          className="govuk-form-group"
        >
          <h1
            className="govuk-heading-xl"
          >
            Add a consequence
          </h1>
          <table
            className="govuk-table"
          >
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              />
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header"
                  scope="row"
                >
                  Mode of transport
                </th>
                <td
                  className="govuk-table__cell"
                >
                  Bus
                </td>
                <td
                  className="govuk-table__cell"
                >
                  <a
                    className="govuk-link"
                    href="/type-of-consequence"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    Change
                  </a>
                </td>
              </tr>
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header"
                  scope="row"
                >
                  Consequence type
                </th>
                <td
                  className="govuk-table__cell"
                >
                  Network wide
                </td>
                <td
                  className="govuk-table__cell"
                >
                  <a
                    className="govuk-link"
                    href="/type-of-consequence"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    Change
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label govuk-label--l"
                htmlFor="description"
              >
                Consequence description
              </label>
              <div
                className="govuk-hint"
                id="description-hint"
              >
                What advice would you like to display?
              </div>
              <div
                className=""
              >
                <textarea
                  className="govuk-textarea w-3/4"
                  defaultValue="A truck broke down on a bridge"
                  id="description"
                  maxLength={500}
                  name="description"
                  onBlur={[Function]}
                  rows={3}
                />
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group"
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend"
              >
                <span
                  className="govuk-heading-l govuk-!-margin-bottom-0"
                >
                  Would you like to remove this from journey planners?
                </span>
              </legend>
              <div
                className=""
              >
                <div
                  className="govuk-radios"
                  id="radio-buttons"
                >
                  <div
                    className="govuk-radios__item govuk-!-margin-bottom-1"
                  >
                    <input
                      className="govuk-radios__input"
                      id="remove-from-journey-planners-yes"
                      name="remove-from-journey-planners"
                      onChange={[Function]}
                      type="radio"
                      value="yes"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="remove-from-journey-planners-yes"
                    >
                      Yes
                    </label>
                  </div>
                  <div
                    className="govuk-radios__item"
                  >
                    <input
                      className="govuk-radios__input"
                      id="remove-from-journey-planners-no"
                      name="remove-from-journey-planners"
                      onChange={[Function]}
                      type="radio"
                      value="no"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="remove-from-journey-planners-no"
                    >
                      No
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label govuk-label--l"
                htmlFor="disruption-delay"
              >
                How long is the disruption delay?
              </label>
              <div
                className="govuk-hint"
                id="disruption-delay-hint"
              >
                Enter the time in the format hhmm. For example 4800 is 48 hours
              </div>
              <div
                className=""
              >
                <input
                  aria-describedby="disruption-delay-hint"
                  className="govuk-input govuk-date-input__input govuk-input--width-4"
                  defaultValue="yes"
                  disabled={false}
                  id="disruption-delay"
                  name="disruption-delay"
                  onBlur={[Function]}
                  placeholder="hhmm"
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label govuk-label--l"
                htmlFor="disruption-severity"
              >
                What is the severity of the disruption?
              </label>
              <div
                className=""
              >
                <select
                  className="govuk-select w-3/4"
                  defaultValue="severe"
                  id="disruption-severity"
                  name="disruption-severity"
                  onBlur={[Function]}
                >
                  <option
                    disabled={true}
                    value=""
                  >
                    Select a severity
                  </option>
                  <option
                    value="unknown"
                  >
                    Unknown
                  </option>
                  <option
                    value="verySlight"
                  >
                    Very slight
                  </option>
                  <option
                    value="slight"
                  >
                    Slight
                  </option>
                  <option
                    value="normal"
                  >
                    Normal
                  </option>
                  <option
                    value="severe"
                  >
                    Severe
                  </option>
                  <option
                    value="verySevere"
                  >
                    Very severe
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group"
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend"
              >
                <span
                  className="govuk-heading-l govuk-!-margin-bottom-0"
                >
                  What is the direction of the disruption?
                </span>
              </legend>
              <div
                className=""
              >
                <div
                  className="govuk-radios"
                  id="radio-buttons"
                >
                  <div
                    className="govuk-radios__item govuk-!-margin-bottom-1"
                  >
                    <input
                      className="govuk-radios__input"
                      id="disruption-direction-allDirections"
                      name="disruption-direction"
                      onChange={[Function]}
                      type="radio"
                      value="allDirections"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="disruption-direction-allDirections"
                    >
                      All directions
                    </label>
                  </div>
                  <div
                    className="govuk-radios__item govuk-!-margin-bottom-1"
                  >
                    <input
                      className="govuk-radios__input"
                      id="disruption-direction-inbound"
                      name="disruption-direction"
                      onChange={[Function]}
                      type="radio"
                      value="inbound"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="disruption-direction-inbound"
                    >
                      Inbound
                    </label>
                  </div>
                  <div
                    className="govuk-radios__item"
                  >
                    <input
                      className="govuk-radios__input"
                      id="disruption-direction-outbound"
                      name="disruption-direction"
                      onChange={[Function]}
                      type="radio"
                      value="outbound"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="disruption-direction-outbound"
                    >
                      Outbound
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <button
            className="govuk-button mt-8"
            data-module="govuk-button"
          >
            Save and continue
          </button>
        </div>
      </form>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`pages > CreateConsequenceNetwork > should render correctly with no inputs 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          alpha
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <form
        action="/api/createConsequenceNetwork"
        method="post"
      >
        <div
          className="govuk-form-group"
        >
          <h1
            className="govuk-heading-xl"
          >
            Add a consequence
          </h1>
          <table
            className="govuk-table"
          >
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              />
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header"
                  scope="row"
                >
                  Mode of transport
                </th>
                <td
                  className="govuk-table__cell"
                >
                  Bus
                </td>
                <td
                  className="govuk-table__cell"
                >
                  <a
                    className="govuk-link"
                    href="/type-of-consequence"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    Change
                  </a>
                </td>
              </tr>
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header"
                  scope="row"
                >
                  Consequence type
                </th>
                <td
                  className="govuk-table__cell"
                >
                  Network wide
                </td>
                <td
                  className="govuk-table__cell"
                >
                  <a
                    className="govuk-link"
                    href="/type-of-consequence"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    Change
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label govuk-label--l"
                htmlFor="description"
              >
                Consequence description
              </label>
              <div
                className="govuk-hint"
                id="description-hint"
              >
                What advice would you like to display?
              </div>
              <div
                className=""
              >
                <textarea
                  className="govuk-textarea w-3/4"
                  defaultValue=""
                  id="description"
                  maxLength={500}
                  name="description"
                  onBlur={[Function]}
                  rows={3}
                />
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group"
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend"
              >
                <span
                  className="govuk-heading-l govuk-!-margin-bottom-0"
                >
                  Would you like to remove this from journey planners?
                </span>
              </legend>
              <div
                className=""
              >
                <div
                  className="govuk-radios"
                  id="radio-buttons"
                >
                  <div
                    className="govuk-radios__item govuk-!-margin-bottom-1"
                  >
                    <input
                      className="govuk-radios__input"
                      id="remove-from-journey-planners-yes"
                      name="remove-from-journey-planners"
                      onChange={[Function]}
                      type="radio"
                      value="yes"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="remove-from-journey-planners-yes"
                    >
                      Yes
                    </label>
                  </div>
                  <div
                    className="govuk-radios__item"
                  >
                    <input
                      className="govuk-radios__input"
                      id="remove-from-journey-planners-no"
                      name="remove-from-journey-planners"
                      onChange={[Function]}
                      type="radio"
                      value="no"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="remove-from-journey-planners-no"
                    >
                      No
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label govuk-label--l"
                htmlFor="disruption-delay"
              >
                How long is the disruption delay?
              </label>
              <div
                className="govuk-hint"
                id="disruption-delay-hint"
              >
                Enter the time in the format hhmm. For example 4800 is 48 hours
              </div>
              <div
                className=""
              >
                <input
                  aria-describedby="disruption-delay-hint"
                  className="govuk-input govuk-date-input__input govuk-input--width-4"
                  defaultValue=""
                  disabled={false}
                  id="disruption-delay"
                  name="disruption-delay"
                  onBlur={[Function]}
                  placeholder="hhmm"
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group"
          >
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label govuk-label--l"
                htmlFor="disruption-severity"
              >
                What is the severity of the disruption?
              </label>
              <div
                className=""
              >
                <select
                  className="govuk-select w-3/4"
                  defaultValue=""
                  id="disruption-severity"
                  name="disruption-severity"
                  onBlur={[Function]}
                >
                  <option
                    disabled={true}
                    value=""
                  >
                    Select a severity
                  </option>
                  <option
                    value="unknown"
                  >
                    Unknown
                  </option>
                  <option
                    value="verySlight"
                  >
                    Very slight
                  </option>
                  <option
                    value="slight"
                  >
                    Slight
                  </option>
                  <option
                    value="normal"
                  >
                    Normal
                  </option>
                  <option
                    value="severe"
                  >
                    Severe
                  </option>
                  <option
                    value="verySevere"
                  >
                    Very severe
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            className="govuk-form-group"
          >
            <fieldset
              className="govuk-fieldset"
            >
              <legend
                className="govuk-fieldset__legend"
              >
                <span
                  className="govuk-heading-l govuk-!-margin-bottom-0"
                >
                  What is the direction of the disruption?
                </span>
              </legend>
              <div
                className=""
              >
                <div
                  className="govuk-radios"
                  id="radio-buttons"
                >
                  <div
                    className="govuk-radios__item govuk-!-margin-bottom-1"
                  >
                    <input
                      className="govuk-radios__input"
                      id="disruption-direction-allDirections"
                      name="disruption-direction"
                      onChange={[Function]}
                      type="radio"
                      value="allDirections"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="disruption-direction-allDirections"
                    >
                      All directions
                    </label>
                  </div>
                  <div
                    className="govuk-radios__item govuk-!-margin-bottom-1"
                  >
                    <input
                      className="govuk-radios__input"
                      id="disruption-direction-inbound"
                      name="disruption-direction"
                      onChange={[Function]}
                      type="radio"
                      value="inbound"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="disruption-direction-inbound"
                    >
                      Inbound
                    </label>
                  </div>
                  <div
                    className="govuk-radios__item"
                  >
                    <input
                      className="govuk-radios__input"
                      id="disruption-direction-outbound"
                      name="disruption-direction"
                      onChange={[Function]}
                      type="radio"
                      value="outbound"
                    />
                    <label
                      className="govuk-label govuk-radios__label"
                      htmlFor="disruption-direction-outbound"
                    >
                      Outbound
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <button
            className="govuk-button mt-8"
            data-module="govuk-button"
          >
            Save and continue
          </button>
        </div>
      </form>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;
